[package]
name = "IronOS"
version = "0.1.0"
authors = ["s-Camp"]
edition = "2018"

# Profile used for 'cargo build'
[profile.dev]
panic = "abort" # Disables stack unwinding on panic

# Profile used for 'cargo build --release'
[profile.release]
panic = "abort" # Disables stack unwinding on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
